[package]
name = "rs-ydb-conn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
#ydb = "0.6.2"
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3"}
async-ffi = {version = "0.5", features = ["abi_stable"]}

[build-dependencies]
cbindgen = "0.26"
