[package]
name = "ktestcontainers"
version = "0.1.0"
authors = ["Sergey Okatov <sokatov@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
#workspace = ""

[lib]
name = "ktestcontainers"
#path = "src/lib.rs"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

[dependencies]
testcontainers = "0.14.0"
#log = "0.4.17"
#once_cell = "1.12.0"
#serde = "1.0.138"
#serde_json = "1.0.82"

#[workspace]
#members = ["./src/*"]
